ALignment issues for Line Item and Product List Item are fixed

--- a/app/assets/stylesheets/returns/Checkbox.scss
+++ b/app/assets/stylesheets/returns/Checkbox.scss
@@ -2,6 +2,7 @@
 .Checkbox__wrapper {
   text-align: left;
   float: left;
+  margin-right: 10px;
 }
 
 .Checkbox {
