--- a/app/assets/stylesheets/returns/LineItem.scss
+++ b/app/assets/stylesheets/returns/LineItem.scss
@@ -6,11 +6,12 @@
 }
 
 .LineItem {
-    margin-top: 72px;
     text-align: center;
+    background: #f5f5f5;
+    padding-top: 50px;
     @include desktop {
-        margin-top: 92px;
         text-align: right;
+        padding-top: 115px;
     }
 }
 
@@ -28,12 +29,8 @@
 .LineItem hr {
     border-color: #000;
     @include desktop {
-        display: block;
-        width: 20vw;
-        position: relative;
-        left: 29vw;
-    }
-    @include xLarge {
-        left: 30vw;
+      width: 220px;
+      float: right;
+      display: block;
     }
 }
