--- a/app/assets/stylesheets/returns/OrderHistory.scss
+++ b/app/assets/stylesheets/returns/OrderHistory.scss
@@ -1,16 +1,9 @@
 @import './mixins';
-.order__container {
-    padding: 0;
-    @include mediumUp {
-        margin: auto 32px;
-    }
-}
 
 .order__container .order-id {
     font-size: 22px;
     text-align: center;
     @include desktop {
-        float: left;
         margin-top: -40px;
         text-align: left;
     }
@@ -30,23 +23,19 @@
     }
 }
 
-.order__container .Product__listItem__container {
-    padding: 40px 20px;
-    @include mediumUp {
-        padding: 25px 45px;
-        margin-bottom: 90px;
-    }
-}
 .Product__listItem, .order__container .returnButton__container {
-    margin: 25px 0px 40px;
+    margin: 25px 0px 20px;
+    @include tablet {
+      margin: 25px 0px 40px;
+    }
+
 }
-.order__container .Product__listItem__container .ship-date {
+.order__container  .ship-date {
     color: #979797;
     text-indent: 10vw;
     margin-bottom: -10px;
     @include tablet {
         text-indent: 0;
         margin-bottom: auto;
-        text-indent: 3vw;
     }
 }
