--- a/app/assets/stylesheets/returns/StepOne.scss
+++ b/app/assets/stylesheets/returns/StepOne.scss
@@ -6,9 +6,6 @@
 .StepOne__Container {
     background: #F5F5F5;
     margin: 0;
-    @include desktop {
-        margin: auto 32px;
-    }
 }
 
 .StepOne__Container .return-checkbox {
@@ -22,12 +19,6 @@
     }
 }
 
-.StepOne__Container .Product__listItem__container {
-    padding: 60px 20px;
-    @include desktop {
-        padding-bottom: 20px;
-    }
-}
 
 .StepOne__Container .instructions {
     text-align: center;
@@ -58,8 +49,9 @@
     font-size: 22px;
     text-align: center;
     color: black;
-    margin-bottom: 35px;
+    margin-bottom: 20px;
     margin-top: 20px;
+    font-weight: 500;
     @include desktop {
         text-align: left;
     }
@@ -70,16 +62,6 @@
 .StepOne__Container .order-id {
     @include desktop {
         margin-top: -35px;
-    }
-}
-
-.StepOne__Container .Form__Container, .StepOne__Container .returnWindowPassed__container {
-    @include tablet {
-        padding: 0;
-    }
-    @include desktop {
-        padding: 0;
-        margin: auto;
     }
 }
 
@@ -107,7 +89,7 @@
     width: 100%;
 }
 
-.Product__listItem__container .returnWindowPassed__container {
+.returnWindowPassed__container {
     background: #F4F4F4;
     text-align: center;
     border: 1px solid #979797;
@@ -116,15 +98,15 @@
 
 .returnWindowPassed__container .windowClosed-copy {
     font-weight: 600;
+    font-weight: 600;
+    padding: 30px 40px 0px 30px;
+    margin-bottom: 10px;
 }
 
 .returnWindowPassed__container .windowClosed-list {
     list-style: none;
     padding: 0;
-}
-
-.returnWindowPassed__container .windowClosed-list {
-  margin-bottom: 0;
+    margin-bottom: 25px;;
 }
 
 .returnWindowPassed__container .windowClosed-list li a {
