--- a/app/assets/stylesheets/returns/index.scss
+++ b/app/assets/stylesheets/returns/index.scss
@@ -43,6 +43,9 @@ body {
 .u-white-text {
 	color: white;
 }
+.u-background-white {
+  background-color: white;
+}
 button a {
 	text-decoration: none;
 }
